--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-click==6.7
+Click==7.0
 Flask==1.0.2
 gunicorn==19.9.0
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-pyspellchecker==0.1.3
-Werkzeug==0.14.1
+MarkupSafe==1.1.1
+pyspellchecker==0.5.0
+Werkzeug==0.15.5
